[package]
name = "vkdomainchecker"
version = "0.1.0"
authors = ["DuckerMan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="*", features=["full"]}
vkapi = {git="https://github.com/DuckerMan/vk_api", branch="beta"}
futures = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = 'abort'